--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll-parallax": "^3.4.2",
+    "react-scroll-trigger": "^0.6.14",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
