--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "framer-motion": "^10.16.1",
+    "gsap": "^3.12.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll-parallax": "^3.4.2",
-    "react-scroll-trigger": "^0.6.14",
     "tailwindcss": "3.3.3",
+    "taos": "^1.0.5",
     "typescript": "5.1.6"
   }
 }
